--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewData["Title"]="Index";
 }
-
+<body class="back">
 <br>
 <h1>Carrito de Compras</h1>
 <br>
@@ -66,3 +66,4 @@
 <br>
 <br>
 <br>
+</body>
