--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -27,7 +27,7 @@
                   alt="@item.Image" />
             </div>
           </div>
-          <div class="card-body co" >
+          <div class="card-body co fo" >
             <h5 class="card-title " >@Html.DisplayFor(modelItem => item.Name)</h5>
               <p class="card-text " >Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
               <p class="card-text">Categoria: @Html.DisplayFor(modelItem => item.Categoria)</p>
