--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,6 +26,10 @@ a {
   color: rgb(0, 0, 0);
 }
 
+.fo{
+  background-color:#f3974b
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
