--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -36,6 +36,8 @@ a {
   border-color: #1861ac;
 }
 
+.g900 { font-weight: 700; }
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
