--- a/Views/Pago/Create.cshtml
+++ b/Views/Pago/Create.cshtml
@@ -5,60 +5,62 @@
 
 <h1>@ViewData["Title"]</h1>
 
-    <div class="container">
+<div class="container">
 
-        <div class="row">
-          <div class="col-sm-10 mt-5">
-           <form asp-controller="Pago" asp-action="Pagar">
-              <div class="form-group row">
-                <input type="hidden" asp-for="UserID"/>
-                <div class="col-sm-2">
-                  <label asp-for="NombreTarjeta" class="control-label"></label>
+    <div class="row">
+        <div class="col-sm-10 mt-5">
+            <form asp-controller="Pago" asp-action="Pagar">
+                <div class="form-group row">
+                    <input type="hidden" asp-for="UserID" />
+                    <div class="col-sm-3" align="left">
+                        <label asp-for="NombreTarjeta" class="control-label">Nombre del titular de la Tarjeta:</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input asp-for="NombreTarjeta" class="form-control" />
+                    </div>
+                    <div class="col-sm-3" align="right">
+                        <label asp-for="NumeroTarjeta" class="control-label">Número de Tarjeta:</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input asp-for="NumeroTarjeta" class="form-control"
+                            data-inputmask="'mask': '9999-9999-9999-9999'" />
+                    </div>
                 </div>
-                <div class="col-sm-2">
-                  <input asp-for="NombreTarjeta" class="form-control" />
+                <div class="form-group row">
+                    <div class="col-sm-3" align="left">
+                        <label asp-for="DueDateYYMM" class="control-label">Fecha de vencimiento:</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input asp-for="DueDateYYMM" class="form-control"
+                            data-inputmask="'mask': '99/99', 'placeholder': 'yy/mm'" />
+                    </div>
+                    <div class="col-sm-3" align="right">
+                        <label asp-for="Cvv" class="control-label">CVV:</label>
+                    </div>
+                    <div class="col-sm-3" >
+                        <input asp-for="Cvv" class="form-control"
+                            data-inputmask="'mask': '999', 'placeholder': '999'" />
+                    </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <div class="col-sm-2">
-                  <label asp-for="NumeroTarjeta" class="control-label"></label>
+                <div class="form-group row">
+                    
                 </div>
-                <div class="col-sm-2">
-                  <input asp-for="NumeroTarjeta" class="form-control" data-inputmask="'mask': '9999-9999-9999-9999'" />
+                <div class="form-group row">
+                    <div class="col-sm-3">
+                        <label asp-for="MontoTotal" class="control-label">Monto total a pagar:</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." disabled/>
+                    </div>
                 </div>
-              </div>              
-              <div class="form-group row">
-                <div class="col-sm-2">
-                  <label asp-for="DueDateYYMM" class="control-label"></label>
+                <div class="form-group row">
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">
+                        <button type="submit" class="btn btn-success btn-lg">Pagar</button>
+                    </div>
                 </div>
-                <div class="col-sm-2">
-                  <input asp-for="DueDateYYMM" class="form-control" data-inputmask="'mask': '99/99', 'placeholder': 'yy/mm'" />
-                </div>
-              </div>
-              <div class="form-group row">
-                <div class="col-sm-2">
-                  <label asp-for="Cvv" class="control-label"></label>
-                </div>
-                <div class="col-sm-2">
-                  <input asp-for="Cvv" class="form-control" data-inputmask="'mask': '999', 'placeholder': '999'" />
-                </div>
-              </div>
-              <div class="form-group row">
-                <div class="col-sm-2">
-                  <label asp-for="MontoTotal" class="control-label"></label>
-                </div>
-                <div class="col-sm-2">
-                  <input asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." />
-                </div>
-              </div>  
-              <div class="form-group row">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-2">
-                  <button type="submit" class="btn btn-primary">Pagar</button> 
-                </div>
-              </div>
             </form>
             <h1>@ViewData["Message"]</h1>
-          </div>
         </div>
-    </div
+    </div>
+</div
