--- a/Views/Catalogo/Catalogo3.cshtml
+++ b/Views/Catalogo/Catalogo3.cshtml
@@ -1,8 +1,7 @@
-
 @model IEnumerable<PROYECTO_BICICLETAS.Models.Producto>
 
 @{
-    ViewData["Title"] = "Catalogo de Indumentaria";
+  ViewData["Title"] = "Catalogo de Indumentaria";
 }
 <h1 style="text-align:center;">Catalogo de Indumentaria</h1>
 
@@ -14,30 +13,33 @@
   </ol>
 </nav>
 <br>
+
 <body class="back">
   <div class="container">
     <div class="row">
       @foreach (var item in Model)
-      { 
-    <div class="col-sm-4">
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="card-img-actions" align="center">
-            <img class="img-responsive" width="190" height="200" src="/img/@item.Image"
-              alt="@item.Image" />
+      {
+        <div class="col-sm-4">
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="card-img-actions" align="center">
+                <a asp-action="Details3" asp-route-id="@item.Id"><img class="img-responsive" width="190" height="200"
+                  src="/img/@item.Image" alt="@item.Image" /></a>
+              </div>
+            </div>
+            <div class="card-body co fo">
+              <a asp-action="Details3" asp-route-id="@item.Id">
+                <h5 class="card-title g900">@Html.DisplayFor(modelItem => item.Name)</h5>
+              </a>
+              <p class="card-text"> Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
+              <p class="card-text"> Stock:@Html.DisplayFor(modelItem => item.Amout)</p>
+              <a class="btn btn-primary " asp-action="Add" asp-route-id="@item.Id"><strong>Añadir</strong></a>
+              <a class="btn btn-info" asp-action="Details3" asp-route-id="@item.Id"><strong>Detalle</strong></a>
+            </div>
           </div>
         </div>
-        <div class="card-body co fo">
-          <h5 class="card-title g900">@Html.DisplayFor(modelItem => item.Name)</h5>
-          <p class="card-text"> Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
-          <p class="card-text"> Stock:@Html.DisplayFor(modelItem => item.Amout)</p> 
-          <a class="btn btn-primary " asp-action="Add" asp-route-id="@item.Id" ><strong>Añadir</strong></a>
-              <a class="btn btn-info" asp-action="Details3" asp-route-id="@item.Id"><strong>Detalle</strong></a>
-        </div>
-      </div>
+
+      }
+
     </div>
-  
-    }
- 
-  </div>
 </body>
