--- a/Views/Catalogo/Details.cshtml
+++ b/Views/Catalogo/Details.cshtml
@@ -30,7 +30,7 @@
           <h5 class="card-title">Precio: S/. @Html.DisplayFor(model => model.Price)</h5>
              
  
-          <a class="btn btn-primary" asp-action="Add" asp-route-id="Id">Añadir al Carrito</a>
+          <a class="btn btn-primary" asp-action="Add" asp-route-id="@Model.Id">Añadir al Carrito</a>
           <br>
           <br>
 
