--- a/Views/Pago/Create.cshtml
+++ b/Views/Pago/Create.cshtml
@@ -50,7 +50,7 @@
                         <label asp-for="MontoTotal" class="control-label">Monto total a pagar:</label>
                     </div>
                     <div class="col-sm-3">
-                        <input asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="."/>
+                        <input asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." readonly>
                     </div>
                 </div>
                 <div class="form-group row">
