--- a/Views/Proforma/Edit.cshtml
+++ b/Views/Proforma/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar Carrito</h1>
 
 <h4>Proforma</h4>
 <hr />
@@ -22,14 +22,14 @@
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar al carrito de compras</a>
 </div>
 
 @section Scripts {
