--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -52,8 +52,8 @@
                         S/. @Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
-                        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Borrar</a>
                     </td>
                 </tr>
             }
