--- a/Views/Catalogo/Details3.cshtml
+++ b/Views/Catalogo/Details3.cshtml
@@ -1,8 +1,9 @@
 @model PROYECTO_BICICLETAS.Models.Producto
 
 @{
-    ViewData["Title"] = "Detalle";
+  ViewData["Title"] = "Detalle";
 }
+
 <body class="back">
   <h1>Detalle</h1>
   <nav aria-label="breadcrumb">
@@ -16,20 +17,20 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-              
+
         <div class="card-img-actions" align="center">
-          <img class="img-responsive" width="490" height="500"
-            src="/img/@Html.DisplayFor(model => model.Image)" alt="@Html.DisplayFor(model => model.Image)"  />
+          <img class="img-responsive" width="490" height="500" src="/img/@Html.DisplayFor(model => model.Image)"
+            alt="@Html.DisplayFor(model => model.Image)" />
         </div>
       </div>
       <div class="col-md-6" align="left">
         <div class="card-body">
           <h4 class="card-title">@Html.DisplayFor(model => model.Name)</h4>
-            <br>
-            <p>Sea el primero en dejar una reseña para este artículo</p>
+          <br>
+          <p>Sea el primero en dejar una reseña para este artículo</p>
           <h5 class="card-title">Precio: S/. @Html.DisplayFor(model => model.Price)</h5>
-              
-             
+
+
           <a class="btn btn-primary" asp-action="Add" asp-route-id="@Model.Id">Añadir al Carrito</a>
           <br>
           <br>
@@ -37,19 +38,19 @@
 
           <img src="/img/img0.png">
         </div>
-      </div>  
+      </div>
     </div>
 
     <div class="col-md-6">
+      <br>
+      <br>
+      <h4>Caraterísticas</h4>
+      <p class="card-text"> @Html.DisplayFor(model => model.Descripcion)</p>
+    </div>
     <br>
     <br>
-    <h4>Caraterísticas</h4>
-    <p class="card-text"> @Html.DisplayFor(model => model.Descripcion)</p>
+    <br>
   </div>
-    <br>
-    <br>
-    <br>
-  </div>
-            
+
   </div>
 </body>
