--- a/Views/Home/Contacto.cshtml
+++ b/Views/Home/Contacto.cshtml
@@ -5,38 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/site.css" rel="stylesheet"/>
+    <link href="css/site.css" rel="stylesheet" />
     <title>Contacto</title>
 </head>
 
-<body class="back"> 
+<body class="back">
     <div class="container">
 
         <div class="row">
-        <div class="col-md-2">
+            <div class="col-md-2">
                 <img src="https://png.pngtree.com/element_our/png_detail/20181229/vector-shop-icon-png_302739.jpg"
                     alt="" width="70" height="70">
-                
-                
-            
-        </div>
 
-        <div  class="col-md-2">
-            <h1 align="left">Ubicación</h1>
-        
+
+
+            </div>
+
+            <div class="col-md-2">
+                <h1 align="left">Ubicación</h1>
+
+            </div>
+            <div class="col-md-8">
+
+
+            </div>
         </div>
-        <div  class="col-md-8">
-            
-        
-        </div>
-        </div>
-          <hr>  
-           
-            
+        <hr>
+
+
         <div class="row">
 
-            <div class="col-md-2" >
-               
+            <div class="col-md-2">
+
             </div>
 
             <div class="col-md-8" align="center">
@@ -46,104 +46,108 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2758.824631989816!2d-76.95663744370526!3d-12.073270741050935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c6fafd1e1e95%3A0x5784f18d5bead8f1!2sAv.%20la%20Molina%201167%2C%20La%20Molina%2015024!5e0!3m2!1sen!2spe!4v1633621267331!5m2!1sen!2spe"
                     width="800" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-            <div class="col-md-2" >
-               
+            <div class="col-md-2">
+
             </div>
             <br>
             <br>
         </div>
-       
+
         <br>
 
-        
-            <br>
-            
-                <h1>Contáctanos</h1>
-            
 
-            
-            <hr>
-            <br>
-            
+        <br>
 
-           
+        <h1>Contáctanos</h1>
 
-            
+
+
+        <hr>
+        <br>
+
+
+
+
+
+
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
 
         </div>
-          
-        <div class="row">
-            <div class="col-md-4">
+        <div class="col-md-6">
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-6 col-sm-4">
+                    <p align="center">Instagram</p>
+                    <a href="https://www.instagram.com/?hl=en">
+                        <img src="https://i2.wp.com/eltallerdehector.com/wp-content/uploads/2021/06/logo-instagram-icon.png?fit=512%2C512&ssl=1"
+                            alt="" width="150" height="150">
+                    </a>
+                    <a href="https://www.instagram.com/?hl=en"> ZonaBiciCentroIG.com </a>
+                </div>
+
+                <div class="col-6 col-sm-4">
+                    <p align="center">Facebook</p>
+                    <a href="https://www.facebook.com/">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png"
+                            alt="" width="150" height="150">
+                    </a>
+                    <a href="https://www.facebook.com/"> ZonaBiciCentroFB.com </a>
+                </div>
+                <div class="w-100 d-none d-md-block">
+                    <br>
+                </div>
+
+                <div class="col-6 col-sm-4">
+                    <p align="center">Whatsapp</p>
+                    <a href="https://www.whatsapp.com/?lang=en">
+                        <img src="https://i.pinimg.com/originals/91/9d/f0/919df067a8fbd22ce7b6f401b7688b35.png" alt=""
+                            width="150" height="150">
+                    </a>
+                    <a href="https://www.whatsapp.com/?lang=en">+51 980 124 123</a>
+                </div>
+
+                <div class="col-6 col-sm-4">
+                    <p align="center">Gmail</p>
+                    <a href="https://www.google.com/intl/es-419/gmail/about/#">
+                        <img src="https://cdn.icon-icons.com/icons2/2631/PNG/512/gmail_new_logo_icon_159149.png" alt=""
+                            width="150" height="150">
+                    </a>
+                    <a href="https://www.google.com/intl/es-419/gmail/about/#">ZonaBici@gmail.com</a>
+                </div>
+            </div>
+            <div class="col-md-2">
 
             </div>
-            <div class="col-md-6">
-                <br>
-                <br> 
-                <div class="row">
-                   <div class="col-6 col-sm-4">
-                   <p align="center">Instagram</p>
-                   <a href="https://www.instagram.com/?hl=en">
-                   <img src="https://i2.wp.com/eltallerdehector.com/wp-content/uploads/2021/06/logo-instagram-icon.png?fit=512%2C512&ssl=1"   alt="" width="150" height="150">
-                   </a>
-                   <a href="https://www.instagram.com/?hl=en">  ZonaBiciCentroIG.com  </a>
-                   </div>
 
-                   <div class="col-6 col-sm-4">
-                   <p align="center">Facebook</p>
-                   <a href="https://www.facebook.com/">
-                   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png"  alt="" width="150" height="150">
-                   </a>
-                   <a href="https://www.facebook.com/">  ZonaBiciCentroFB.com  </a>
-                   </div>
-                   <div class="w-100 d-none d-md-block">
-                       <br>
-                   </div>
 
-                   <div class="col-6 col-sm-4">
-                   <p align="center">Whatsapp</p>
-                   <a href="https://www.whatsapp.com/?lang=en">
-                   <img src="https://i.pinimg.com/originals/91/9d/f0/919df067a8fbd22ce7b6f401b7688b35.png"   alt="" width="150" height="150">
-                   </a>
-                   <a href="https://www.whatsapp.com/?lang=en">+51 980 124 123</a>
-                   </div>
-
-                   <div class="col-6 col-sm-4">
-                       <p align="center">Gmail</p>
-                   <a href="https://www.google.com/intl/es-419/gmail/about/#">
-                   <img src="https://cdn.icon-icons.com/icons2/2631/PNG/512/gmail_new_logo_icon_159149.png"  alt="" width="150" height="150">
-                   </a>
-                   <a href="https://www.google.com/intl/es-419/gmail/about/#">ZonaBici@gmail.com</a>
-                   </div>
-                </div>
-                <div class="col-md-2">
-
-                </div>
-               
-            
-            </div>
-
-            
         </div>
-            
 
 
-            
+    </div>
 
-             
-            
-          
-               
 
-            
-            <br>
-            <br>
 
-            
+
+
+
+
+
+
+
+
+    <br>
+    <br>
+
+
     </div>
     <br>
-            <br>
+    <br>
 
-    
+
 </body>
 
 </html>
