--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -1,10 +1,11 @@
 @model IEnumerable<PROYECTO_BICICLETAS.Models.Producto>
 
 @{
-    ViewData["Title"] = "Catalogo de Bicicletas";
+  ViewData["Title"] = "Catalogo de Bicicletas";
 }
 <h1 style="text-align:center;">Catalogo de Bicicletas</h1>
 <br>
+
 <body class="back">
   <nav aria-label="breadcrumb">
     <ol class="nav">
@@ -16,36 +17,32 @@
 
   <div class="container">
     <div class="row">
-      @foreach (var item in Model)
-      { 
-    
-      <div class="col-sm-4">
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="card-img-actions" align="center">
-              <a asp-action="Details" asp-route-id="@item.Id"><img class="img-responsive" width="190" height="200" src="/img/@item.Image"
-                  alt="@item.Image" /></a>
+        @foreach (var item in Model)
+        {
+
+        <div class="col-sm-4">
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="card-img-actions" align="center">
+                <a asp-action="Details" asp-route-id="@item.Id"><img class="img-responsive" width="190" height="200"
+                  src="/img/@item.Image" alt="@item.Image" /></a>
+              </div>
+            </div>
+            <div class="card-body co fo">
+              <a asp-action="Details" asp-route-id="@item.Id">
+                <h5 class="card-title g900 ">@Html.DisplayFor(modelItem => item.Name)</h5>
+              </a>
+              <p class="card-text ">Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
+              <p class="card-text">Categoria: @Html.DisplayFor(modelItem => item.Categoria)</p>
+              <p class="card-text"> Stock: @Html.DisplayFor(modelItem => item.Amout) unidades</p>
+              <a class="btn btn-primary " asp-action="Add" asp-route-id="@item.Id"><strong>Añadir</strong></a>
+              <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><strong>Detalle</strong></a>
             </div>
           </div>
-          <div class="card-body co fo" >
-            <a asp-action="Details" asp-route-id="@item.Id"><h5 class="card-title g900 " >@Html.DisplayFor(modelItem => item.Name)</h5></a>
-              <p class="card-text " >Precio: S/.@Html.DisplayFor(modelItem => item.Price)</p>
-              <p class="card-text">Categoria: @Html.DisplayFor(modelItem => item.Categoria)</p>
-              <p class="card-text"> Stock: @Html.DisplayFor(modelItem => item.Amout) unidades</p> 
-              <a class="btn btn-primary " asp-action="Add" asp-route-id="@item.Id" ><strong>Añadir</strong></a>
-              <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><strong>Detalle</strong></a>
-          </div>
         </div>
-      </div>
 
-   
-      }
- 
-  </div>
+
+        }
+
+    </div>
 </body>
-    
-  
-  
-
-  
- 
