--- a/Views/Catalogo/Registrado.cshtml
+++ b/Views/Catalogo/Registrado.cshtml
@@ -6,9 +6,10 @@
 <h1 style="text-align:center;">Confirmación</h1>
 <br>
 
- <h1>@ViewData["Title"]</h1>
- <br>
- <br>
+<h1>@ViewData["Title"]</h1>
+<br>
+<br>
 <div align="center">
-<a class="nav-link text-dark" asp-area="" asp-controller="Proforma" asp-action="Index"> <button class="btn btn-danger">VER CARRITO</button></a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Proforma" asp-action="Index"> <button
+            class="btn btn-danger">VER CARRITO</button></a>
 </div>
