--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4"> <b>MISIÓN</b></h2>
+                            <h2 class="display-4"> <b><strong>MISIÓN</strong></b></h2>
                             <p>ZonaBici es la tienda modelo en Perú para la promoción de la bicicleta como medio de
                                 transporte habitual, seguro y sostenible, que contribuye a la mejora de la calidad de
                                 vida
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4"><b>VISIÓN</b></h2>
+                            <h2 class="display-4 "><b><strong>VISIÓN</strong></b></h2>
                             <p>ZonaBici es una tienda proactiva en la promoción de la bicicleta, con reconocimiento e
                                 influencia, que representa los intereses de los y las ciclistas a nivel nacional y en
                                 cada
